--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -72,17 +72,22 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="textH1White" parent="latoBold">
+        <item name="android:textColor">@color/gray_100</item>
+        <item name="android:textSize">30sp</item>
+    </style>
+
     <style name="textH4White" parent="latoBold">
         <item name="android:textColor">@color/gray_100</item>
         <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="textH5White" parent="latoBold">
+    <style name="textReguler1White" parent="latoRegular">
         <item name="android:textColor">@color/gray_100</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="textRegular1White" parent="latoBold">
+    <style name="textRegular2White" parent="latoRegular">
         <item name="android:textColor">@color/gray_100</item>
         <item name="android:textSize">12sp</item>
     </style>
