--- a/app/src/main/res/xml/activity_onboarding_scene.xml
+++ b/app/src/main/res/xml/activity_onboarding_scene.xml
@@ -32,7 +32,7 @@
         <Constraint
             android:id="@+id/logoMenu1"
             android:layout_width="0dp"
-            android:layout_height="300dp"
+            android:layout_height="200dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
@@ -42,9 +42,9 @@
             android:layout_marginEnd="32dp" />
         <Constraint
             android:id="@+id/menu1"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="32dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_marginStart="180dp"
             android:layout_marginBottom="16dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toStartOf="@+id/menu2"
@@ -58,12 +58,13 @@
             android:id="@+id/menu2"
             motion:layout_constraintEnd_toStartOf="@+id/menu3"
             motion:layout_constraintStart_toEndOf="@+id/menu1"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             motion:layout_constraintBottom_toBottomOf="@+id/menu1"
             motion:layout_constraintVertical_bias="0.0"
             motion:layout_constraintHorizontal_bias="0.5"
-            motion:layout_constraintTop_toTopOf="@+id/menu1" >
+            motion:layout_constraintTop_toTopOf="@+id/menu1"
+            android:layout_marginStart="8dp">
             <CustomAttribute
                 motion:attributeName="crossfade"
                 motion:customFloatValue="0" />
@@ -72,12 +73,13 @@
             android:id="@+id/menu3"
             motion:layout_constraintEnd_toStartOf="@+id/menu4"
             motion:layout_constraintStart_toEndOf="@+id/menu2"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             motion:layout_constraintBottom_toBottomOf="@+id/menu2"
             motion:layout_constraintVertical_bias="0.0"
             motion:layout_constraintHorizontal_bias="0.5"
-            motion:layout_constraintTop_toTopOf="@+id/menu2">
+            motion:layout_constraintTop_toTopOf="@+id/menu2"
+            android:layout_marginStart="8dp">
             <CustomAttribute
                 motion:attributeName="crossfade"
                 motion:customFloatValue="0" />
@@ -86,12 +88,13 @@
             android:id="@+id/menu4"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toEndOf="@+id/menu3"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             motion:layout_constraintBottom_toBottomOf="@+id/menu3"
             motion:layout_constraintVertical_bias="0.0"
-            android:layout_marginEnd="32dp"
-            motion:layout_constraintTop_toTopOf="@+id/menu3">
+            android:layout_marginEnd="180dp"
+            motion:layout_constraintTop_toTopOf="@+id/menu3"
+            android:layout_marginStart="8dp">
             <CustomAttribute
                 motion:attributeName="crossfade"
                 motion:customFloatValue="0" />
@@ -111,7 +114,7 @@
         <Constraint
             android:id="@+id/logoMenu2"
             android:layout_width="0dp"
-            android:layout_height="300dp"
+            android:layout_height="200dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintVertical_bias="0.4"
             motion:layout_constraintTop_toTopOf="parent"
@@ -122,9 +125,9 @@
         <Constraint
             android:id="@+id/menu1"
             motion:layout_constraintEnd_toStartOf="@+id/menu2"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="32dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_marginStart="180dp"
             motion:layout_constraintHorizontal_bias="0.5"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintBottom_toBottomOf="parent"
@@ -137,12 +140,13 @@
             android:id="@+id/menu2"
             motion:layout_constraintEnd_toStartOf="@+id/menu3"
             motion:layout_constraintStart_toEndOf="@+id/menu1"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             motion:layout_constraintBottom_toBottomOf="@+id/menu1"
             motion:layout_constraintVertical_bias="0.0"
             motion:layout_constraintHorizontal_bias="0.5"
-            motion:layout_constraintTop_toTopOf="@+id/menu1" >
+            motion:layout_constraintTop_toTopOf="@+id/menu1"
+            android:layout_marginStart="8dp">
             <CustomAttribute
                 motion:attributeName="crossfade"
                 motion:customFloatValue="1" />
@@ -151,13 +155,14 @@
             android:id="@+id/menu3"
             motion:layout_constraintEnd_toStartOf="@+id/menu4"
             motion:layout_constraintStart_toEndOf="@+id/menu2"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             motion:layout_constraintBottom_toBottomOf="@+id/menu2"
             motion:layout_constraintVertical_bias="0.0"
             motion:layout_constraintHorizontal_bias="0.5"
             motion:layout_constraintTop_toTopOf="@+id/menu2"
-            motion:crossfade="0">
+            motion:crossfade="0"
+            android:layout_marginStart="8dp">
             <CustomAttribute
                 motion:attributeName="crossfade"
                 motion:customFloatValue="0" />
@@ -166,13 +171,14 @@
             android:id="@+id/menu4"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toEndOf="@+id/menu3"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             motion:layout_constraintBottom_toBottomOf="@+id/menu3"
             motion:layout_constraintVertical_bias="0.0"
-            android:layout_marginEnd="32dp"
+            android:layout_marginEnd="180dp"
             motion:layout_constraintTop_toTopOf="@+id/menu3"
-            motion:crossfade="0">
+            motion:crossfade="0"
+            android:layout_marginStart="8dp">
             <CustomAttribute
                 motion:attributeName="crossfade"
                 motion:customFloatValue="0" />
@@ -195,7 +201,7 @@
             android:id="@+id/logoMenu2"
             motion:layout_constraintEnd_toStartOf="parent" />
         <Constraint
-            android:layout_height="300dp"
+            android:layout_height="200dp"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="0dp"
@@ -209,12 +215,13 @@
             android:id="@+id/menu3"
             motion:layout_constraintEnd_toStartOf="@+id/menu4"
             motion:layout_constraintStart_toEndOf="@+id/menu2"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             motion:layout_constraintBottom_toBottomOf="@+id/menu2"
             motion:layout_constraintVertical_bias="0.0"
             motion:layout_constraintHorizontal_bias="0.5"
-            motion:layout_constraintTop_toTopOf="@+id/menu2">
+            motion:layout_constraintTop_toTopOf="@+id/menu2"
+            android:layout_marginStart="8dp">
             <CustomAttribute
                 motion:attributeName="crossfade"
                 motion:customFloatValue="1" />
@@ -223,13 +230,14 @@
             android:id="@+id/menu2"
             motion:layout_constraintEnd_toStartOf="@+id/menu3"
             motion:layout_constraintStart_toEndOf="@+id/menu1"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             motion:layout_constraintBottom_toBottomOf="@+id/menu1"
             motion:layout_constraintVertical_bias="0.0"
             motion:layout_constraintHorizontal_bias="0.5"
             motion:layout_constraintTop_toTopOf="@+id/menu1"
-            motion:crossfade="0" >
+            motion:crossfade="0"
+            android:layout_marginStart="8dp">
             <CustomAttribute
                 motion:attributeName="crossfade"
                 motion:customFloatValue="0" />
@@ -237,11 +245,11 @@
         <Constraint
             android:id="@+id/menu1"
             motion:layout_constraintEnd_toStartOf="@+id/menu2"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="180dp"
             motion:layout_constraintHorizontal_bias="0.5"
             motion:layout_constraintStart_toStartOf="parent"
             motion:crossfade="0" >
@@ -253,13 +261,14 @@
             android:id="@+id/menu4"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toEndOf="@+id/menu3"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             motion:layout_constraintBottom_toBottomOf="@+id/menu3"
             motion:layout_constraintVertical_bias="0.0"
-            android:layout_marginEnd="32dp"
+            android:layout_marginEnd="180dp"
             motion:layout_constraintTop_toTopOf="@+id/menu3"
-            motion:crossfade="0">
+            motion:crossfade="0"
+            android:layout_marginStart="8dp">
             <CustomAttribute
                 motion:attributeName="crossfade"
                 motion:customFloatValue="0" />
@@ -277,12 +286,13 @@
             android:id="@+id/menu4"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toEndOf="@+id/menu3"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             motion:layout_constraintBottom_toBottomOf="@+id/menu3"
             motion:layout_constraintVertical_bias="0.0"
-            android:layout_marginEnd="32dp"
-            motion:layout_constraintTop_toTopOf="@+id/menu3">
+            android:layout_marginEnd="180dp"
+            motion:layout_constraintTop_toTopOf="@+id/menu3"
+            android:layout_marginStart="8dp">
             <CustomAttribute
                 motion:attributeName="crossfade"
                 motion:customFloatValue="1" />
@@ -290,11 +300,11 @@
         <Constraint
             android:id="@+id/menu1"
             motion:layout_constraintEnd_toStartOf="@+id/menu2"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="16dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="180dp"
             motion:layout_constraintHorizontal_bias="0.5"
             motion:layout_constraintStart_toStartOf="parent"
             motion:crossfade="0">
@@ -306,13 +316,14 @@
             android:id="@+id/menu3"
             motion:layout_constraintEnd_toStartOf="@+id/menu4"
             motion:layout_constraintStart_toEndOf="@+id/menu2"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             motion:layout_constraintBottom_toBottomOf="@+id/menu2"
             motion:layout_constraintVertical_bias="0.0"
             motion:layout_constraintHorizontal_bias="0.5"
             motion:layout_constraintTop_toTopOf="@+id/menu2"
-            motion:crossfade="0" >
+            motion:crossfade="0"
+            android:layout_marginStart="8dp">
             <CustomAttribute
                 motion:attributeName="crossfade"
                 motion:customFloatValue="0" />
@@ -321,13 +332,14 @@
             android:id="@+id/menu2"
             motion:layout_constraintEnd_toStartOf="@+id/menu3"
             motion:layout_constraintStart_toEndOf="@+id/menu1"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             motion:layout_constraintBottom_toBottomOf="@+id/menu1"
             motion:layout_constraintVertical_bias="0.0"
             motion:layout_constraintHorizontal_bias="0.5"
             motion:layout_constraintTop_toTopOf="@+id/menu1"
-            motion:crossfade="0">
+            motion:crossfade="0"
+            android:layout_marginStart="8dp">
             <CustomAttribute
                 motion:attributeName="crossfade"
                 motion:customFloatValue="0" />
@@ -341,7 +353,7 @@
             android:id="@+id/logoMenu3"
             motion:layout_constraintEnd_toStartOf="parent" />
         <Constraint
-            android:layout_height="300dp"
+            android:layout_height="200dp"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="0dp"
@@ -354,12 +366,14 @@
         <Constraint
             android:id="@+id/button"
             motion:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
             android:layout_marginBottom="32dp"
             motion:layout_constraintBottom_toTopOf="@+id/menu2"
             android:alpha="1"
-            motion:layout_constraintStart_toStartOf="parent" />
+            motion:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="24dp"
+            android:layout_marginStart="24dp" />
     </ConstraintSet>
     <Transition
         motion:constraintSetStart="@+id/menu3"
