--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -216,7 +216,7 @@
         app:tint="@color/green_500" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnStarted"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="24dp"
@@ -227,7 +227,5 @@
         app:layout_constraintBottom_toTopOf="@+id/menu2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
