--- a/app/src/main/res/xml/activity_onboarding_scene.xml
+++ b/app/src/main/res/xml/activity_onboarding_scene.xml
@@ -364,7 +364,7 @@
             motion:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="32dp" />
         <Constraint
-            android:id="@+id/button"
+            android:id="@+id/btnStarted"
             motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="0dp"
             android:layout_height="60dp"
