--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,40 +12,35 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/textView"
+            style="@style/textH5Black"
+            android:id="@+id/tv_hello"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="32dp"
             android:layout_marginTop="24dp"
-            android:text="Halo,"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="Halo," />
 
         <TextView
-            android:id="@+id/textView2"
+            style="@style/textH5Black"
+            android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="24dp"
-            android:text="Nama"
-            app:layout_constraintStart_toEndOf="@+id/textView"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="Nama" />
 
     </LinearLayout>
 
 
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/card_view"
+        android:id="@+id/card_iot"
         android:layout_width="match_parent"
         android:layout_height="190dp"
         android:layout_gravity="center"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        android:layout_marginEnd="16dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -53,7 +48,7 @@
             android:padding="8dp">
 
             <ImageView
-                android:id="@+id/img_item_photo"
+                android:id="@+id/img_item_iot"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
@@ -63,7 +58,7 @@
                 tools:src="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/name"
+                android:id="@+id/tv_iot"
                 android:layout_width="381dp"
                 android:layout_height="30dp"
                 android:layout_marginStart="24dp"
@@ -74,14 +69,14 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/img_item_photo" />
+                app:layout_constraintTop_toBottomOf="@+id/img_item_iot" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/card_view"
+        android:id="@+id/card_calc"
         android:layout_width="match_parent"
         android:layout_height="190dp"
         android:layout_gravity="center"
@@ -98,7 +93,7 @@
             android:padding="8dp">
 
             <ImageView
-                android:id="@+id/img_item_photo"
+                android:id="@+id/img_item_calc"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
@@ -108,7 +103,7 @@
                 tools:src="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/name"
+                android:id="@+id/tv_calc"
                 android:layout_width="381dp"
                 android:layout_height="30dp"
                 android:layout_marginStart="24dp"
@@ -119,19 +114,25 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/img_item_photo" />
+                app:layout_constraintTop_toBottomOf="@+id/img_item_calc" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/textView7"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        style="@style/textH3Black"
+        android:id="@+id/tv_rv_prompt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Pupuk yang sering dipakai" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
