--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,9 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
         <TextView
-            android:id="@+id/tvLogin"
+            android:id="@+id/tv_login"
             style="@style/textH1Black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,18 +33,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tvEmail"
-            style="@style/textRegular1Green"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:text="@string/email"
-            app:layout_constraintEnd_toEndOf="@+id/tvLogin"
-            app:layout_constraintStart_toStartOf="@+id/tvLogin"
-            app:layout_constraintTop_toBottomOf="@+id/tvLogin" />
-
-        <EditText
+        <com.organeco.view.customview.EmailCustom
             android:id="@+id/edEmail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -53,11 +41,23 @@
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/tvLogin"
-            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
+            app:layout_constraintStart_toStartOf="@+id/tv_login"
+            app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />
 
         <TextView
-            android:id="@+id/tvPassword"
+            android:id="@+id/textViewEmail"
+            style="@style/textRegular1Green"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="@string/email"
+            app:layout_constraintEnd_toEndOf="@+id/tv_login"
+            app:layout_constraintHorizontal_bias="0.133"
+            app:layout_constraintStart_toStartOf="@+id/tv_login"
+            app:layout_constraintTop_toBottomOf="@+id/tv_login" />
+
+        <TextView
+            android:id="@+id/textViewPassword"
             style="@style/textRegular1Green"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -67,28 +67,28 @@
             app:layout_constraintStart_toStartOf="@+id/edEmail"
             app:layout_constraintTop_toBottomOf="@+id/edEmail" />
 
-        <EditText
+        <com.organeco.view.customview.PasswordCustom
             android:id="@+id/edPassword"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="@+id/edEmail"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/edEmail"
-            app:layout_constraintTop_toBottomOf="@+id/tvPassword" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewPassword" />
 
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="0dp"
             android:layout_height="70dp"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="32dp"
             android:text="@string/login"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edPassword" />
 
@@ -117,6 +117,18 @@
             app:layout_constraintStart_toEndOf="@+id/textView5"
             app:layout_constraintTop_toTopOf="@+id/textView5"
             app:layout_constraintVertical_bias="0.0" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="110dp"
+            android:layout_height="88dp"
+            android:layout_marginTop="180dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
