--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnLogout"
+        android:id="@+id/buttonLogout"
         android:layout_width="0dp"
         android:layout_height="70dp"
         android:layout_marginStart="24dp"
