--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.MainActivity">
+    tools:context=".view.MainActivity"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/bg_home"
         android:layout_width="match_parent"
         android:layout_height="240dp"
-        android:layout_marginTop="-4dp"
         android:src="@drawable/home_bg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,20 +58,22 @@
                 />
 
             <ImageButton
+                android:id="@+id/imgBtnBookmark"
                 android:padding="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="@color/green_500"
+                android:background="@drawable/rounded_background_icon"
                 android:src="@drawable/baseline_bookmark_24" />
 
             <ImageButton
+                android:id="@+id/imgBtnProfile"
                 android:padding="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
                 android:layout_gravity="center"
-                android:background="@color/green_500"
+                android:background="@drawable/rounded_background_icon"
                 android:src="@drawable/baseline_person_24" />
 
         </LinearLayout>
