--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/green_700"
     app:layoutDescription="@xml/activity_onboarding_scene"
-    tools:context=".view.start.OnboardingActivity">
+    tools:context=".view.activity.start.OnboardingActivity">
 
     <ImageView
         android:id="@+id/ivPlant1"
@@ -32,25 +32,25 @@
 
     <TextView
         android:id="@+id/titleMenu1"
+        style="@style/textH1White"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="center_horizontal"
         android:text="@string/title_menu_1"
-        style="@style/textH1White"
         app:layout_constraintEnd_toEndOf="@+id/logoMenu1"
         app:layout_constraintStart_toStartOf="@+id/logoMenu1"
         app:layout_constraintTop_toBottomOf="@+id/logoMenu1" />
 
     <TextView
         android:id="@+id/descMenu1"
+        style="@style/textReguler1White"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-condensed-light"
         android:gravity="center_horizontal"
         android:text="@string/desc_menu_1"
-        style="@style/textReguler1White"
         app:layout_constraintEnd_toEndOf="@+id/titleMenu1"
         app:layout_constraintStart_toStartOf="@+id/titleMenu1"
         app:layout_constraintTop_toBottomOf="@+id/titleMenu1" />
@@ -67,25 +67,25 @@
 
     <TextView
         android:id="@+id/titleMenu2"
+        style="@style/textH1White"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="center_horizontal"
-        style="@style/textH1White"
+        android:text="@string/title_menu_2"
         app:layout_constraintEnd_toEndOf="@+id/logoMenu2"
         app:layout_constraintStart_toStartOf="@+id/logoMenu2"
-        app:layout_constraintTop_toBottomOf="@+id/logoMenu2"
-        android:text="@string/title_menu_2" />
+        app:layout_constraintTop_toBottomOf="@+id/logoMenu2" />
 
     <TextView
         android:id="@+id/descMenu2"
+        style="@style/textReguler1White"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-condensed-light"
         android:gravity="center_horizontal"
         android:text="@string/desc_menu_2"
-        style="@style/textReguler1White"
         app:layout_constraintEnd_toEndOf="@+id/titleMenu2"
         app:layout_constraintStart_toStartOf="@+id/titleMenu2"
         app:layout_constraintTop_toBottomOf="@+id/titleMenu2" />
@@ -102,28 +102,28 @@
 
     <TextView
         android:id="@+id/titleMenu3"
+        style="@style/textH1White"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="center_horizontal"
-        style="@style/textH1White"
+        android:text="@string/title_menu_3"
         app:layout_constraintEnd_toEndOf="@+id/logoMenu3"
         app:layout_constraintStart_toStartOf="@+id/logoMenu3"
-        app:layout_constraintTop_toBottomOf="@+id/logoMenu3"
-        android:text="@string/title_menu_3" />
+        app:layout_constraintTop_toBottomOf="@+id/logoMenu3" />
 
     <TextView
         android:id="@+id/descMenu3"
+        style="@style/textReguler1White"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-condensed-light"
         android:gravity="center_horizontal"
-        style="@style/textReguler1White"
+        android:text="@string/desc_menu_3"
         app:layout_constraintEnd_toEndOf="@+id/titleMenu3"
         app:layout_constraintStart_toStartOf="@+id/titleMenu3"
-        app:layout_constraintTop_toBottomOf="@+id/titleMenu3"
-        android:text="@string/desc_menu_3" />
+        app:layout_constraintTop_toBottomOf="@+id/titleMenu3" />
 
     <ImageView
         android:id="@+id/logoMenu4"
@@ -137,28 +137,28 @@
 
     <TextView
         android:id="@+id/titleMenu4"
+        style="@style/textH4White"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="center_horizontal"
-        style="@style/textH4White"
+        android:text="@string/title_menu_4"
         app:layout_constraintEnd_toEndOf="@+id/logoMenu4"
         app:layout_constraintStart_toStartOf="@+id/logoMenu4"
-        app:layout_constraintTop_toBottomOf="@+id/logoMenu4"
-        android:text="@string/title_menu_4" />
+        app:layout_constraintTop_toBottomOf="@+id/logoMenu4" />
 
     <TextView
         android:id="@+id/descMenu4"
+        style="@style/textReguler1White"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-condensed-light"
         android:gravity="center_horizontal"
-        style="@style/textReguler1White"
+        android:text="@string/desc_menu_4"
         app:layout_constraintEnd_toEndOf="@+id/titleMenu4"
         app:layout_constraintStart_toStartOf="@+id/titleMenu4"
-        app:layout_constraintTop_toBottomOf="@+id/titleMenu4"
-        android:text="@string/desc_menu_4" />
+        app:layout_constraintTop_toBottomOf="@+id/titleMenu4" />
 
     <androidx.constraintlayout.utils.widget.ImageFilterView
         android:id="@+id/menu1"
@@ -217,15 +217,15 @@
 
     <Button
         android:id="@+id/btnStarted"
+        style="@style/textH4White"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:alpha="0"
-        style="@style/textH4White"
-        android:textAllCaps="false"
         android:background="@drawable/rounded_bg_button"
         android:text="@string/get_started"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toTopOf="@+id/menu2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -233,15 +233,15 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnGuest"
+        style="@style/textH4White"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:alpha="0"
-        style="@style/textH4White"
+        android:background="@drawable/rounded_bg_button_sec"
         android:text="@string/guest"
         android:textAllCaps="false"
-        android:background="@drawable/rounded_bg_button_sec"
         app:layout_constraintBottom_toTopOf="@+id/menu2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
