--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_100"
-    tools:context=".view.login.LoginActivity">
+    tools:context=".view.activity.login.LoginActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -38,8 +38,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
-            android:ems="10"
             android:drawableStart="@drawable/ic_baseline_email_24"
+            android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tv_login"
@@ -72,8 +72,8 @@
             android:id="@+id/edPassword"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:drawableStart="@drawable/ic_baseline_lock_24"
+            android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="@+id/edEmail"
             app:layout_constraintHorizontal_bias="0.0"
@@ -82,6 +82,7 @@
 
         <Button
             android:id="@+id/btnLogin"
+            style="@style/textH4White"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_marginStart="24dp"
@@ -89,7 +90,6 @@
             android:layout_marginBottom="32dp"
             android:background="@drawable/rounded_bg_button"
             android:text="@string/login"
-            style="@style/textH4White"
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
