--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_100"
-    tools:context=".view.register.RegisterActivity">
+    tools:context=".view.activity.register.RegisterActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -39,8 +39,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
-            android:ems="10"
             android:drawableStart="@drawable/ic_baseline_person_24"
+            android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tv_register"
@@ -73,8 +73,8 @@
             android:id="@+id/etEmail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:drawableStart="@drawable/ic_baseline_email_24"
+            android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="@+id/edName"
             app:layout_constraintHorizontal_bias="0.0"
@@ -96,8 +96,8 @@
             android:id="@+id/etPassword"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:drawableStart="@drawable/ic_baseline_lock_24"
+            android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="@+id/etEmail"
             app:layout_constraintStart_toStartOf="@+id/etEmail"
@@ -105,6 +105,7 @@
 
         <Button
             android:id="@+id/btnRegister"
+            style="@style/textH4White"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_marginStart="24dp"
@@ -113,7 +114,6 @@
             android:layout_marginBottom="32dp"
             android:background="@drawable/rounded_bg_button"
             android:text="@string/register"
-            style="@style/textH4White"
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
