--- a/app/src/main/res/layout/activity_started.xml
+++ b/app/src/main/res/layout/activity_started.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/green_700"
-    tools:context=".view.start.StartedActivity">
+    tools:context=".view.activity.start.StartedActivity">
 
     <ImageView
         android:id="@+id/ivPlant1"
@@ -32,15 +32,15 @@
 
     <TextView
         android:id="@+id/titleMenu4"
+        style="@style/textH1White"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="center_horizontal"
-        style="@style/textH1White"
+        android:text="@string/title_menu_4"
         app:layout_constraintEnd_toEndOf="@+id/logoMenu4"
         app:layout_constraintStart_toStartOf="@+id/logoMenu4"
-        app:layout_constraintTop_toBottomOf="@+id/logoMenu4"
-        android:text="@string/title_menu_4" />
+        app:layout_constraintTop_toBottomOf="@+id/logoMenu4" />
 
     <TextView
         android:id="@+id/descMenu4"
@@ -57,15 +57,15 @@
         app:layout_constraintStart_toStartOf="@+id/titleMenu4"
         app:layout_constraintTop_toBottomOf="@+id/titleMenu4" />
 
-        <Button
+    <Button
         android:id="@+id/btnStart"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:text="@string/get_started"
         android:background="@drawable/rounded_bg_button"
+        android:text="@string/get_started"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descMenu4" />
@@ -75,9 +75,9 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/rounded_bg_button_sec"
         android:text="@string/guest"
         android:textColor="@color/gray_100"
-        android:background="@drawable/rounded_bg_button_sec"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btnStart"
         app:layout_constraintStart_toStartOf="@+id/btnStart"
