--- a/app/src/main/res/layout/item_fertilizer.xml
+++ b/app/src/main/res/layout/item_fertilizer.xml
@@ -19,13 +19,13 @@
 
         <ImageView
             android:id="@+id/img_item_photo"
-            android:layout_width="50dp"
+            android:layout_width="70dp"
             android:layout_height="70dp"
             android:scaleType="centerCrop"
+            android:src="@drawable/image1"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars" />
+            card_view:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_item_name"
