--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.Organeco" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
@@ -62,6 +62,11 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="textRegular3Black" parent="latoRegular">
+        <item name="android:textColor">@color/gray_700</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
     <style name="textH5Green" parent="latoBold">
         <item name="android:textColor">@color/green_700</item>
         <item name="android:textSize">16sp</item>
@@ -75,6 +80,11 @@
     <style name="textH1White" parent="latoBold">
         <item name="android:textColor">@color/gray_100</item>
         <item name="android:textSize">30sp</item>
+    </style>
+
+    <style name="textH2White" parent="latoBold">
+        <item name="android:textColor">@color/gray_100</item>
+        <item name="android:textSize">24sp</item>
     </style>
 
     <style name="textH4White" parent="latoBold">
