--- a/app/src/main/res/layout/item_fertilizer.xml
+++ b/app/src/main/res/layout/item_fertilizer.xml
@@ -10,12 +10,13 @@
     android:layout_marginTop="4dp"
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="4dp"
-    card_view:cardCornerRadius="4dp">
+    card_view:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:padding="10dp"
+        android:background="@color/green_700">
 
         <ImageView
             android:id="@+id/img_item_photo"
@@ -28,6 +29,7 @@
             card_view:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            style="@style/textH1White"
             android:id="@+id/tv_item_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -44,16 +46,18 @@
 
         <TextView
             android:id="@+id/tv_item_description"
+            style="@style/textRegular2White"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:ellipsize="end"
-            android:maxLines="5"
+            android:maxLines="2"
             card_view:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
             card_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"
             card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
             card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
             card_view:layout_constraintVertical_bias="0.0"
-            tools:text="jenis tanaman" />
+            tools:text="description" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
